# Industrial_Rise

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  build.sh  preprocess_code.sh  run_test_suite.sh
.github/workflows/: CI.yml
include/: industrial_map_reduce.hpp  industrial_map_reduce_user_mapper.hpp  industrial_map_reduce_user_reducer.hpp
sources/: industrial_map_reduce_map.cpp  industrial_map_reduce_reduce.cpp  industrial_map_reduce_split.cpp  industrial_map_reduce_start.cpp  industrial_map_reduce_user_mapper.cpp  industrial_map_reduce_user_reducer.cpp  main.cpp
test/: main.cpp
test/integration/: test.py
test/unit/: CMakeLists.txt  main.cpp
